To do:
* add support for extended attribute (named fork) data stream
** add support for LIBFSHFS_ATTRIBUTE_RECORD_TYPE_EXTENTS
* check kHFSHasAttributesMask flag to see if file entry has extended attributes

* what about a symbolic link to HFS+ Private data directory?

* add support for hard link count

* complete name case folding and decomposition tests
* add support for resource fork data stream
* on file_entry_initialize lookup com.apple.decmpfs specifically instead of all attributes?
* catalog B-tree file, include name in branch key check
* file entry API: add extents functions

* ensure traditional HFS input errors for now

* add support to print information about special files (those without a catalog record)

Format support:
* implement support for traditional HFS
* implement support for HFS+/HFX Unicode 2.1 version
* implement support for folder and file information
* implement support for extended folder and file information

20160605
* see `git log' for more recent change log
* worked on format support

20160604
* worked on format support

20160603
* worked on format support

20160228
* worked on format support

20160227
* worked on format support

20160226
* worked on format support

20160220
* worked on format support

20160217
* 2016 update

20090212
* Initial version
